--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -6,7 +6,6 @@
 
 </ion-header>
 
-
-<ion-content padding>
-   <div #map id="map" style="height:100%;"></div>
+<ion-content padding>  
+   <div #map id="map" ></div>
 </ion-content>
